# fantasy-footbal-manager

./: .gitignore  app.py  core_data.py  exceptions.py  free_agents_20250926_161444.csv  logging_config.py  pyproject.toml
actions/: dump_teams.py  list_teams.py  login.py
fantasy_football_manager/: __init__.py  app.py  core_data.py
fantasy_football_manager/actions/: dump_teams.py  list_free_agents.py  list_teams.py  login.py
fantasy_football_manager/sources/: __init__.py  espn.py
fantasy_football_manager/transformers/: __init__.py  espn_players.py  espn_roster.py
modules/: __init__.py  dump_teams.py  list_teams.py  login.py
sources/: __init__.py  yahoo.py
transformers/: __init__.py  yahoo_roster.py
