[tool.poetry]
name = "fantasy-football-manager"
version = "0.1.0"
description = "AI-powered fantasy football team management"
authors = ["Arthur Carey <arthur@example.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.40.0"
pandas = "^2.1.0"
psutil = "^5.9.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ffm = "fantasy_football_manager.app:main"
